src/cases/views/components/case-tabs/_case-tabs.scss
@use "govuk-frontend" as *;

.govuk-width-container:has(.app-case-list-page) {
  max-width: none;
}

.app-case-list-page {
  width: fit-content;
  max-width: 80vw;
  margin-inline: auto;
}

.case-tabs {
  .govuk-table {
    width: 100%;
  }

  [aria-sort] a,
  [aria-sort] a:hover {
    display: inline-flex;
    position: relative;
    margin: 0;
    padding: 0;
    border-width: 0;
    color: #005ea5;
    background-color: transparent;
    -webkit-box-shadow: 0 0 0 0;
    -moz-box-shadow: 0 0 0 0;
    box-shadow: 0 0 0 0;
    font-family: inherit;
    font-size: inherit;
    font-size: 1em;
    font-weight: inherit;
    text-align: inherit;
    text-decoration: none;
    cursor: pointer;
    align-items: center;
  }

  .govuk-tag {
    white-space: nowrap;
    display: inline-block;
    width: max-content;
    max-width: none;
  }

  [aria-sort] a:focus {
    outline: none;
    color: $govuk-focus-text-colour;
    background-color: $govuk-focus-colour;
    box-shadow:
      0 -2px $govuk-focus-colour,
      0 4px $govuk-focus-text-colour;
  }
}

